# portal-culling

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp
common/: controls.cpp  controls.hpp  objloader.cpp  objloader.hpp
include/: config.h  controls.hpp  graph.hpp  objloader.hpp  scene.hpp  shader.hpp  text2D.hpp  texture.hpp
libs/glew-1.13.0/: CMakeLists.txt
portal_algorithm/: CMakeLists.txt
portal_algorithm/src/: basic.fragmentshader  basic.vertexshader  main.cpp
res/scenes/blender/: home.blend  pgr_scene.blend  pgr_scene.blend1
res/textures/: roboto.DDS  robotoBold.DDS  robotoBold2.DDS
scenes/blender/: simple_room.blend
shaders/fragmentShaders/: cell.frag  portal.frag  text.frag
shaders/vertexShaders/: cell.vert  portal.vert  text.vert
src/: GLFWHandler.cpp  a.out  basic.frag  basic.vert  build.sh  config.h  controls.cpp  main.cpp  objloader.cpp  portal_culling  scene.cpp  scene.hpp  shader.cpp  text2D.cpp  texture.cpp
src/libs/: controls.cpp  graph.hpp  objloader.cpp  objloader.hpp  text2D.cpp
src/scene/: home.blend  home.blend1  simple_room.blend1
src/scene/blender/: pgr_scene.blend
src/scenes/blender/: pgr_scene.blend1
src/shaders/: portal.frag  room.frag
src/textures/: RobotoBold.tga  roboto.tga  roboto3.DDS
